# pin-rootlayer-sdk-py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: http.md  signing.md
scripts/: e2e_submit_direct_intent.py
src/pin_rootlayer_sdk/: __init__.py  async_client.py  client.py  encoding.py  exceptions.py  models.py  rootlayer_agent.py  signer.py  signing.py
src/pin_rootlayer_sdk/_proto/: __init__.py
src/pin_rootlayer_sdk/_proto/rootlayer/: __init__.py  direct_pb2.py  intent_pb2.py
tests/: test_e2e_direct_intent.py  test_items_hash.py  test_serialization.py  test_signing_digests.py
