[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pin-rootlayer-sdk"
version = "0.1.0"
description = "Python SDK for PIN RootLayer: signing + HTTP client"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PIN AI" }]
urls = { Repository = "https://github.com/PIN-AI/pin-rootlayer-sdk-py" }
dependencies = [
  "httpx>=0.25,<1",
  "pydantic>=2,<3",
  "eth-account>=0.10,<1",
  "eth-abi>=4,<6",
  "eth-utils>=2,<6",
  "hexbytes>=0.3,<1",
  "grpcio>=1.60,<2",
  "protobuf>=5.29.3,<6",
  "typing-extensions>=4.7; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "ruff>=0.1.8,<1",
  "mypy>=1.7,<2",
  "types-setuptools",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pin_rootlayer_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
  "e2e: end-to-end tests that hit a real RootLayer instance (requires env vars)",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["src/pin_rootlayer_sdk/_proto/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Keep Optional/Union in pydantic models for Python 3.9 compatibility (avoids eval of `X | None`).
  "UP007",
  "UP045",
]

[tool.ruff.lint.isort]
known-first-party = ["pin_rootlayer_sdk"]

[tool.mypy]
python_version = "3.9"
packages = ["pin_rootlayer_sdk"]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_any_generics = true
disallow_subclassing_any = false
ignore_missing_imports = true
