[metadata]
name = pin-rootlayer-sdk
version = 0.1.0
description = Python SDK for PIN RootLayer: signing + HTTP client
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    httpx>=0.25,<1
    pydantic>=2,<3
    eth-account>=0.10,<1
    eth-abi>=4,<6
    eth-utils>=2,<6
    hexbytes>=0.3,<1
    typing-extensions>=4.7; python_version < '3.11'

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4,<9
    ruff>=0.1.8,<1
    mypy>=1.7,<2
    types-setuptools
